# LavenderUI

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  caca.txt  doxyconfig  idea.txt  main.cpp  test.puml
artifacts/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
assets/shaders/: basicFrag.glsl  basicTextFrag.glsl  basicTextVert.glsl  basicVert.glsl  elemFrag.glsl  elemVert.glsl
docs/html/: App_8hpp_source.html  BasicCalculator_8hpp_source.html  Events_8hpp_source.html  FontLoader_8hpp_source.html  Font_8hpp_source.html  IEvent_8hpp_source.html  Input_8hpp_source.html  LayoutBase_8hpp_source.html  Logger_8hpp_source.html  MeshLoader_8hpp_source.html  Mesh_8hpp_source.html  Misc_8hpp_source.html  NativeWindow_8hpp_source.html  PropsBase_8hpp_source.html  ShaderLoader_8hpp_source.html  Shader_8hpp_source.html  TextAttribs_8hpp_source.html  UIBase_8hpp_source.html  UIButton_8hpp_source.html  UIImage_8hpp_source.html  UIPane_8hpp_source.html  UISlider_8hpp_source.html  UISplitPane_8hpp_source.html  UITreeView_8hpp_source.html  UIWindowState_8hpp_source.html  UIWindow_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classsrc_1_1App-members.html  classsrc_1_1App.html  classsrc_1_1App.js  classsrc_1_1elementcomposable_1_1Events-members.html  classsrc_1_1elementcomposable_1_1Events.html  classsrc_1_1elementcomposable_1_1Events.js  classsrc_1_1elementcomposable_1_1Events__inherit__graph.map  classsrc_1_1elementcomposable_1_1Events__inherit__graph.md5  classsrc_1_1elementcomposable_1_1LayoutBase-members.html  classsrc_1_1elementcomposable_1_1LayoutBase.html  classsrc_1_1elementcomposable_1_1LayoutBase.js  (+275 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  concepts_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+17 more)
examples/: testTreeView.cpp
src/: App.cpp  App.hpp
src/Core/Binders/: FileResourceBinder.cpp  FileResourceBinder.hpp  GPUBinder.cpp  GPUBinder.hpp  WindowBinder.cpp  WindowBinder.hpp
src/Core/EventHandler/: Events.hpp  IEvent.hpp
src/Core/LavParser/: LavParser.cpp  LavParser.hpp
src/Core/LayoutHandler/: BasicCalculator.cpp  BasicCalculator.hpp  LayoutBase.cpp  LayoutBase.hpp
src/Core/ResourceHandler/: Font.hpp  FontLoader.cpp  FontLoader.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Core/TextHandler/: TextAttribs.cpp  TextAttribs.hpp
src/Core/WindowHandler/: Input.cpp  Input.hpp  NativeWindow.cpp  NativeWindow.hpp
src/ElementComposable/: EventAttribs.hpp  Events.hpp  IEvent.hpp  LayoutAttribs.cpp  LayoutAttribs.hpp  LayoutBase.cpp  LayoutBase.hpp  PropsBase.cpp  PropsBase.hpp  TextAttribs.cpp  TextAttribs.hpp  VisualAttribs.cpp  VisualAttribs.hpp
src/ElementEvents/: EventManager.hpp  IEvent.hpp
src/FrameState/: FrameState.hpp
src/LayoutCalculator/: BasicCalculator.cpp  BasicCalculator.hpp
src/Node/: UIBase.cpp  UIBase.hpp  UIButton.cpp  UIButton.hpp  UIImage.cpp  UIImage.hpp  UILabel.cpp  UILabel.hpp  UIPane.cpp  UIPane.hpp  UISlider.cpp  UISlider.hpp  UISplitPane.cpp  UIWindow.cpp  UIWindow.hpp
src/Node/Helpers/: UIState.hpp
src/Node/InternalUse/: UIScroll.cpp  UIScroll.hpp
src/ResourceLoaders/: Font.hpp  FontLoader.cpp  FontLoader.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp
src/State/: UIState.hpp  UIWindowState.hpp
src/UIElements/: LayoutAttribs.cpp  LayoutAttribs.hpp  UIBase.cpp  UIBase.hpp  UIButton.cpp  UIButton.hpp  UIDropdown.cpp  UIDropdown.hpp  UIFrame.cpp  UIFrame.hpp  UIImage.cpp  UIImage.hpp  UIPane.cpp  UIPane.hpp  UISlider.cpp  UISlider.hpp  UISplitPane.cpp  UISplitPane.hpp  UITreeView.cpp  UITreeView.hpp  UIWindow.cpp  UIWindow.hpp  VisualAttribs.cpp  VisualAttribs.hpp
src/UINodes/: UIBase.cpp  UIBase.hpp  UIButton.cpp  UIButton.hpp  UIDropdown.cpp  UIDropdown.hpp  UIImage.hpp  UILabel.cpp  UILabel.hpp  UISlider.cpp  UISplitPane.hpp  UITreeView.cpp  UIWindow.cpp  UIWindow.hpp
src/Utils/: Logger.cpp  Logger.hpp  Misc.hpp
src/WindowManagement/: Input.cpp  Input.hpp  NativeWindow.cpp  NativeWindow.hpp
views/: test.xml
